--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "robofriends",
-  "homepage": "https://github.com/DusanVelimirovic/robofriends",
+  "homepage": "https://DusanVelimirovic.github.io/robofriends",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -20,7 +20,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -b master -d build"
   },
   "eslintConfig": {
     "extends": [
